2018-01-XX Jan Kotanski <jan.kotanski@desy.de>
	* add View 1:1 pixels action
	* tagged as 0.8.3

2018-01-09 Jan Kotanski <jan.kotanski@desy.de>
	* fix a bug for scaling initialization
	* tagged as 0.8.2

2018-01-09 Jan Kotanski <jan.kotanski@desy.de>
	* repack sources
	* tagged as 0.8.1

2018-01-09 Jan Kotanski <jan.kotanski@desy.de>
	* add loading image file
	* add topic ComboBox for ZMQ Stream source
	* statistics without scaling
	* tagged as 0.8.0

2018-01-05 Jan Kotanski <jan.kotanski@desy.de>
	* switch off autolevel on plot
	* tagged as 0.7.3

2018-01-05 Jan Kotanski <jan.kotanski@desy.de>
	* synchronize scale levels
	* tagged as 0.7.2

2018-01-04 Jan Kotanski <jan.kotanski@desy.de>
	* add aspect ratio locker
	* tagged as 0.7.1

2018-01-04 Jan Kotanski <jan.kotanski@desy.de>
	* add ZMQ Pickle source
	* add line cut plotting
	* add source timeout into configuration
	* tagged as 0.7.0

2017-12-20 Jan Kotanski <jan.kotanski@desy.de>
	* add mutex to hidra source
	* tagged as 0.6.11

2017-12-19 Jan Kotanski <jan.kotanski@desy.de>
	* make workaround for close query
	* tagged as 0.6.10

2017-12-19 Jan Kotanski <jan.kotanski@desy.de>
	* fix tiff support
	* tagged as 0.6.9

2017-12-08 Jan Kotanski <jan.kotanski@desy.de>
	* fix on missing tango database
	* tagged as 0.6.8

2017-12-08 Jan Kotanski <jan.kotanski@desy.de>
	* add tips to the widgets
	* tagged as 0.6.7

2017-12-08 Jan Kotanski <jan.kotanski@desy.de>
	* add masks back
	* tagged as 0.6.6

2017-12-07 Jan Kotanski <jan.kotanski@desy.de>
	* add quit button
	* tagged as 0.6.5

2017-12-07 Jan Kotanski <jan.kotanski@desy.de>
	* add default TIF reader
	* add pyqtslots
	* improve sardana access
	* tagged as 0.6.4

2017-12-05 Jan Kotanski <jan.kotanski@desy.de>
	* fix for pyqtgraph v0.9.10 and histogram
	* tagged as 0.6.3

2017-12-05 Jan Kotanski <jan.kotanski@desy.de>
	* add man pages
	* tagged as 0.6.2

2017-12-05 Jan Kotanski <jan.kotanski@desy.de>
	* add four missing transformations