@@ -1,5 +1,7 @@
 2018-01-XX Jan Kotanski <jan.kotanski@desy.de>
 	* add View 1:1 pixels action
+	* allow changing ZMQ Scream source topic during viewing
+	* set default HWM for ZMQ Scream source to 1
 	* tagged as 0.8.3
 
 2018-01-09 Jan Kotanski <jan.kotanski@desy.de>
